--- a/src/components/popup/popup.html
+++ b/src/components/popup/popup.html
@@ -7,20 +7,20 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <script src="./thirdparty/he.min.js"></script>
-    <script src="./filter-options.js" defer type="module"></script>
-    <script src="./popup.js" defer type="module"></script>
+    <script src="../thirdparty/he.min.js"></script>
+    <script src="../../hooks/filter/js/filter-options.js" defer type="module"></script>
+    <script src="./js/popup.js" defer type="module"></script>
     <link
       href="http://fonts.cdnfonts.com/css/neo-sans-arabic"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="thirdparty/virtual-select.min.css" />
-    <script src="thirdparty/virtual-select.min.js"></script>
+    <link rel="stylesheet" href="../thirdparty/virtual-select.min.css" />
+    <script src="../thirdparty/virtual-select.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="./popup.css" />
+    <link rel="stylesheet" href="./css/popup.css" />
     <title>التحقق من الأحاديث</title>
   </head>
 
@@ -111,7 +111,7 @@
         href="https://github.com/AhmedElTabarani/hadith-checker-extension"
         target="_blank"
       >
-        <img src="./icons/GitHub-Mark-32px.png" />
+        <img src="../../../icons/GitHub-Mark-32px.png" />
       </a>
     </footer>
   </body>
