--- a/src/components/search-window/search-window.html
+++ b/src/components/search-window/search-window.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <script src="./search-window.js" defer type="module"></script>
+    <script src="../search-window/js/search-window.js" defer type="module"></script>
     <link
       href="http://fonts.cdnfonts.com/css/neo-sans-arabic"
       rel="stylesheet"
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="./popup.css" />
+    <link rel="stylesheet" href="../popup/css/popup.css" />
     <title>التحقق من الأحاديث</title>
   </head>
 
